compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__inconsistent_try_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 744
expression: "try x = Error(1) Error(\"Not this one\") Error(\"This one\")"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:40
  │
1 │ try x = Error(1) Error("Not this one") Error("This one")
  │                                        ^^^^^^^^^^^^^^^^^

This returned value has a type incompatible with the previous try expression.
All the try expressions in a block and the final result value must have
the same error type.

Expected type:

    Result(a, Int)

Found type:

    Result(a, String)

