compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__int_float_list.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "[1.0] == [1]"
---
----- SOURCE CODE
[1.0] == [1]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:10
  │
1 │ [1.0] == [1]
  │          ^^^

Expected type:

    List(Float)

Found type:

    List(Int)
